--- a/Styles/style.css
+++ b/Styles/style.css
@@ -340,3 +340,46 @@ hero
   margin-right: 1rem;
   font-size: 1.5rem;
 }
+/* 
+=======
+skills
+=======
+*/
+.skills {
+  background: var(--clr-primary-7);
+}
+.skill {
+  text-align: center;
+  margin-bottom: 3rem;
+}
+.skill:hover .skill-icon {
+  color: var(--clr-primary-4);
+}
+.skill-icon {
+  font-size: 3.5rem;
+  color: var(--clr-primary-2);
+  transition: var(--transition);
+}
+.skill-text {
+  max-width: 25rem;
+  margin-right: auto;
+  margin-left: auto;
+}
+@media screen and (min-width: 768px) {
+  .skills-center {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    column-gap: 2rem;
+  }
+  .section {
+    padding: 2rem 0;
+  }
+}
+@media screen and (min-width: 992px) {
+  .skills-center {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr;
+    column-gap: 1rem;
+  }
+}
