--- a/Styles/style.css
+++ b/Styles/style.css
@@ -383,3 +383,98 @@ skills
     column-gap: 1rem;
   }
 }
+/* 
+=======
+services
+=======
+*/
+.services {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("../images/services.jpg") center/cover no-repeat fixed;
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+}
+.section-title h2 {
+  color: var(--clr-white);
+}
+.service {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  overflow: hidden;
+  transition: var(--transition);
+  padding: 1rem 2rem;
+}
+.service:nth-child(odd) {
+  background-color: rgba(255, 255, 255, 0.7);
+}
+.service:nth-child(odd) .service-back-btn {
+  padding: 0.75rem 1rem;
+  border-radius: 0;
+}
+
+.service:nth-child(even) {
+  background-color: rgba(1, 1, 1, 0.5);
+  color: var(--clr-white);
+}
+.service:nth-child(even) .service-back-text {
+  color: var(--clr-white);
+}
+.service:nth-child(even) .service-back-btn {
+  background-color: transparent;
+  border: 0.125rem solid var(--clr-primary-4);
+  padding: 00.75rem 1rem;
+  border-radius: 0;
+  color: var(--clr-primary-4);
+}
+.service:nth-child(even) .service-back-btn:hover {
+  background-color: var(--clr-primary-4);
+  color: #222;
+}
+
+.service-front {
+  transition: var(--transition);
+  transform: translateY(40%);
+}
+.service-front-icon {
+  color: var(--clr-primary-4);
+  font-size: 2.5rem;
+}
+.service-front-title {
+  margin-top: 2rem;
+}
+.service:hover .service-front {
+  transform: translateY(-150%);
+}
+.service-back {
+  transform: translateY(150%);
+  transition: var(--transition);
+}
+.service:hover .service-back {
+  transform: translateY(-50%);
+}
+@media screen and (min-width: 768px) {
+  .services-center {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:
+      "a b"
+      "c d";
+  }
+  .service:nth-child(1) {
+    grid-area: a;
+  }
+  .service:nth-child(2) {
+    grid-area: b;
+  }
+  .service:nth-child(4) {
+    grid-area: c;
+  }
+  .service:nth-child(3) {
+    grid-area: d;
+  }
+}
