add fixed navbar class in css

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -312,6 +312,14 @@ navbar
     justify-content: space-around;
   }
 }
+.fixed-navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 4;
+  box-shadow: var(--dark-shadow);
+}
 /* 
 =======
 hero
