add contact css

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -567,3 +567,28 @@ projects
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
+
+/* 
+========
+contacts
+========
+*/
+.contact {
+  background: url("../images/filter.jpg") center/cover no-repeat fixed;
+  min-height: 20vh;
+}
+.contact-center {
+  display: grid;
+  place-items: center;
+}
+.contact-title {
+  text-transform: uppercase;
+  color: var(--clr-white);
+}
+.btn-contact {
+  background-color: transparent;
+  border: 0.15rem solid var(--clr-primary-5);
+  color: var(--clr-primary-5);
+  padding: 0.75rem 1.5rem;
+  font-size: 1rem;
+}
