--- a/Styles/style.css
+++ b/Styles/style.css
@@ -586,9 +586,12 @@ contacts
   color: var(--clr-white);
 }
 .btn-contact {
-  background-color: transparent;
   border: 0.15rem solid var(--clr-primary-5);
-  color: var(--clr-primary-5);
   padding: 0.75rem 1.5rem;
   font-size: 1rem;
+}
+.btn-contact:hover {
+  background-color: transparent;
+  color: var(--clr-primary-5);
+  font-size: 1.5rem;
 }
