--- a/Styles/style.css
+++ b/Styles/style.css
@@ -618,44 +618,38 @@ posts
 */
 .posts {
   background: var(--clr-grey-10);
+  position: relative;
 }
 .posts .section-title h2 {
   color: var(--clr-grey-3);
 }
 .posts-center {
-  display: flex;
-  flex-direction: row;
-  padding: 1rem;
-  align-items: center;
-}
-.posts-container {
-  position: relative;
-  height: 30rem;
-  width: 80vw;
+  display: grid;
+  place-items: center;
   overflow: hidden;
-  margin-right: 1rem;
-  margin-left: 1rem;
-}
-.post {
-  position: absolute;
-  width: 100%;
-  top: 10%;
-  left: 0;
+  width: 80vw;
   border-radius: var(--radius);
   box-shadow: var(--light-shadow);
   transition: var(--transition);
 }
-.post:nth-child(1) {
-  transform: translateX(0);
-}
-.post:nth-child(2) {
-  transform: translateX(120%);
-}
-.post:nth-child(3) {
-  transform: translateX(200%);
-}
-.post:hover {
+.posts-center:hover {
   box-shadow: var(--dark-shadow);
+}
+
+.posts-container {
+  display: flex;
+  height: 30rem;
+  width: 80vw;
+  height: 400px;
+  max-height: 100vh;
+}
+.post {
+  flex: 1 0 100%;
+  height: 100%;
+  transition: var(--transition);
+}
+
+.post:hover {
   transform: scale(1.02);
 }
 .post-img {
@@ -667,6 +661,16 @@ posts
 .post-info {
   padding: 1rem 2rem;
   text-align: center;
+}
+.btn-container {
+  position: absolute;
+  top: 50%;
+  left: 2.5%;
+  width: 95%;
+}
+.slider-right {
+  position: absolute;
+  right: 0;
 }
 .slider-btn {
   font-size: 2.5rem;
@@ -681,6 +685,15 @@ posts
   cursor: pointer;
   transform: scale(1.1);
 }
+@media screen and (min-width: 768px) {
+  .posts-center {
+    width: 85vw;
+  }
+  .posts-container {
+    width: 50vw;
+  }
+}
+
 /* 
 ============
 password checker
@@ -703,7 +716,6 @@ password checker
 }
 .form-center {
   z-index: 8;
-  /* padding: 2rem; */
   display: grid;
   place-items: center;
   position: fixed;
@@ -712,10 +724,6 @@ password checker
   width: 100%;
   height: 100vh;
   background-color: rgba(1, 1, 1, 0.5);
-  /*  */
-  /* height: auto; */
-  /* margin-bottom: 2rem; */
-  /* position: relative; */
   perspective: 1500px;
 }
 .show-form {
