--- a/Styles/style.css
+++ b/Styles/style.css
@@ -979,3 +979,52 @@ footer
     display: flex;
   }
 }
+/* 
+========
+password recovery
+========
+*/
+.nav-logo:hover .nav-home {
+  color: var(--clr-primary-4);
+}
+.nav-home {
+  font-size: 2rem;
+  color: var(--clr-grey-3);
+  cursor: pointer;
+  transition: var(--transition);
+}
+.nav-logo:hover .nav-home:hover {
+  color: var(--clr-primary-1);
+}
+.nav-links:hover .nav-home {
+  color: var(--clr-primary-4);
+}
+.nav-links:hover .nav-home:hover {
+  color: var(--clr-primary-5);
+}
+.recovery-form-center {
+  min-height: 60vh;
+  display: grid;
+  place-items: center;
+  background-color: var(--clr-grey-10);
+  border-radius: var(--radius);
+}
+.recovery-home {
+  align-self: start;
+  justify-self: start;
+  font-size: 2rem;
+  color: var(--clr-grey-3);
+  transition: var(--transition);
+}
+.recovery-home:hover {
+  color: var(--clr-primary-5);
+}
+.login-recovery {
+  height: 100%;
+}
+.login-recovery h3 {
+  margin-bottom: 4rem;
+}
+.login-recovery button {
+  margin-top: 2rem;
+}
